07-Aug-2015 Laurent Duflot
	* upgrade to SUSYTools-00-06-19
	new Btagging recommandations and working point
	new muon isaolation scale factors
	muon default acceptance up to 2.5 instead of 2.4
	some cross-section /  kfactor updates
	* BuildSUSYObject: switch on muon isolation scale factors
	* INSTALL: update instruction for new SUSYTools
	* launch_jobs_on_grid.py: update to new files in CDIFiles


07-Aug-2015 Laurent Duflot
	* BuildSUSYObject: do not try to extract photon scale factor for data
	Committed revision 688047

06-Aug-2015 Laurent Duflot
	* launch_jobs_on_grid.py: make CDIFiles available on the grid
	* PhysObjProxyUtils: fix typo in delete conditions leading to memory leaks
	* zerolepton.config: single switch for filling RJigsawVars block
	* ZeroLeptonNTVars: switch caching off for output trees, set flush/save size explicitely to control memory footprint
	* BuildSUSYObject: do not try to extract e/mu scale factor for data


04-Aug-2015 Laurent Duflot
	* upgrade to SUSYTools-00-06-17-03 (Photon iso changed to Cone40,
	IsBadJet now only vetoes above 50GeV except if jvtcut)
	* BuildSUSYObject: adapt to new GetTotalMuonSF interface (runnumber 267639),
	test e/mu SF after OR.
	* BuildSUSYObject: move to TST term for MET
	* ZeroLeptonUtil, SR+CRxx: remove negative energy cell code

04-Aug-2015 Laurent Duflot (from Larry Lee)
	* INSTALL, PhysObjProxyUtils, SR+CRxx: adapt to new Ext_RestFrames
	* ZeroLeptonCutVal, cutfile8TeV_RJigsaw.dat: add jet pT cut for RJigSaw
	* ZeroLeptonNTVars, FilterUpdateMerge: update naming of RJigSaw variables
	* config/zerolepton_RJigsaw.config: config file for RJigSaw studies

04-Aug-2015 Laurent Duflot
	* tagged as ZeroLeptonRun2-00-00-48

03-Aug-2015 Yu Nakahama
	* Added data/mc15_13TeV_signal_{50ns,25ns}_p2375.ds for mc15 signal samples (SS,GG_direct and GG_onestepCC)
	* Updated makeSignalPointPickle.py for mc15

03-Aug-2015 Laurent Duflot
	* ZeroLeptonRunPeriod.h, JobBookeeping, launch_jobs_on_grid.py: add p2384