@@ -130,6 +130,9 @@ void ZeroLeptonCRZ::begin()
     if(m_doSmallNtuple) m_tree = bookTree(sSR);
   }
 
+  if (  m_fillTRJigsawVars ) {    m_proxyUtils.RJigsawInit(); }
+
+
 }
 
 
@@ -490,7 +493,6 @@ bool ZeroLeptonCRZ::processEvent(xAOD::TEvent& event)
   
   std::map<TString,float> RJigsawVariables;
   if ( m_fillTRJigsawVars) {
-    m_proxyUtils.RJigsawInit();
     m_proxyUtils.CalculateRJigsawVariables(good_jets, 
 					   missingETPrime.X(),
 					   missingETPrime.Y(),
